# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  buildspec.yml
.amazonq/cli-todo-lists/: 1760658752764.json
.github/workflows/: deploy-ecs.yml  general.yml
.sqlx/: query-077e7026e903adbc3d2b80592c5ed6d32bfde0ecf46b3a3a519a809c745cb7d7.json  query-442416e4038a4cd431ce4ea49adaf569922f36536fcdf48facfa2be7258590b4.json  query-63617c0ac813d8159e2613f265f74f938efccc06e3cb27a4cf91293d6be6eebc.json  query-7a4c87b390e93466d3f1f4c277b158b8e1879f6f0c4b2cfe35a5d9b437d63c88.json  query-c0c1027177e7d8648789b2a8ffbf8b8c97e8c062c51d7814f8a14396a011ac44.json  query-f291fad8d2647fc58297079512619a78b36816ddfc8cd1862f333175b47aee60.json
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/plans/: unit-1-network-code-generation-plan.md  unit-4-compute-code-generation-plan.md  unit-4-compute-functional-design-plan.md  unit-4-compute-infrastructure-design-plan.md  unit-4-compute-nfr-design-plan.md  unit-4-compute-nfr-requirements-plan.md
aidlc-docs/construction/unit-1-network/code/: implementation-summary.md
aidlc-docs/construction/unit-1-network/functional-design/: business-logic-model.md  business-rules.md  domain-entities.md
aidlc-docs/construction/unit-1-network/infrastructure-design/: cdk-stack-design.md  deployment-configuration.md  resource-specifications.md
aidlc-docs/construction/unit-1-network/nfr-design/: logical-components.md  nfr-patterns.md  security-hardening.md
aidlc-docs/inception/application-design/: component-dependency.md  component-methods.md  components.md  services.md  unit-of-work-dependency.md  unit-of-work-story-map.md  unit-of-work.md
aidlc-docs/inception/plans/: execution-plan.md
aidlc-docs/inception/requirements/: requirement-clarification-questions.md  requirement-verification-questions.md  requirements.md
aidlc-docs/inception/reverse-engineering/: api-documentation.md  architecture.md  business-overview.md  code-quality-assessment.md  code-structure.md  component-inventory.md  dependencies.md  interaction-diagrams.md  reverse-engineering-timestamp.md  technology-stack.md
cdk/: .gitignore  README.md  app.py  cdk.context.json  requirements.txt
cdk/scripts/: bootstrap.sh  deploy.sh  destroy.sh  diff.sh
cdk/stacks/: __init__.py  compute_stack.py  network_stack.py
cdk/tests/: __init__.py  test_compute_stack.py
cdk/tests/integration/: __init__.py  test_network_deployment.py
cdk/tests/unit/: __init__.py  test_network_stack.py
configuration/: base.yaml  local.yaml  production.yaml
docs/: AMP_SETUP.md
k8s/: amp-scraper-config.yaml  configmap.yaml  deployment.yaml  secret.yaml
k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  secret.yaml  service.yaml
k8s/overlays/dev/: configmap-patch.yaml  deployment-patch.yaml  kustomization.yaml  secret-patch.yaml
k8s/overlays/prod/: configmap-patch.yaml  deployment-patch.yaml  kustomization.yaml  secret-patch.yaml
migrations/: 20241217013951_create_subscriptions_table.sql  20250417221803_make_status_not_null_in_subscriptions.sql  20251125053015_make_status_not_null_in_subscriptions.sql  20251226005359_amke_status_null_in_subscriptions.sql  20260101224111_rename_password_column.sql  20260108011439_seed_user.sql
scripts/: dependency-graph.sh  init.sh  init_db.sh  init_redis.sh  migrate_prod.sh  release-and-build.sh  subscribe.json  subscribe.sh  zero2prod_.sh  zero2prod_postman_collection.json
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  metrics.rs  middleware.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  metrics.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
(+23 files in other folders)
