[package]
name = "zero2prod"
version = "0.15.0"
edition = "2024"
authors = ["Dwayne Crearer <dcrearer@gmail.com"]
description = "A newsletter service built with Rust"
license = "MIT"
repository = "https://github.com/dcrearer/zero2prod"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
config = "0.15"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["serde", "v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.10", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4"
unicode-segmentation = "1"
validator = "0.18"
rand = {  version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
actix-session = { version = "0.11.0", features = ["redis-session-rustls"] }
serde_json = "1"


[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
assert2 = "0.3"
rstest = "0.26"
fake = "2.9"
quickcheck = "1.0"
quickcheck_macros = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
serde_json = "1"
linkify = "0.10"
